Fix & Add widget blueprint  * Add CheckBoxWidget  * Fix SimulationWidget, Build.cs  * Fix BoxNesting

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,5 +11,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/NestingSimulator")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Inventory.Inventory
+EditorStartupMap=/Game/Maps/BoxNesting.BoxNesting
+GameDefaultMap=/Game/Maps/BoxNesting.BoxNesting
 
