Fix filter option & pawn  * min, max option.  * pawn movement max speed.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=398E22AB4B8A71E274BA2DB5EF2CE566
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
